src/logs/process-manager.log
/mnt/c/Users/Skuli/Documents/GitHub/process-manager/src/js/ProcessManager/Process.js:36
    this.proc.('error', (code) => {
              ^
SyntaxError: Unexpected token (
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/mnt/c/Users/Skuli/Documents/GitHub/process-manager/src/js/ProcessManager/ProcessFactory.js:1:87)
false
stuff
stuff2
false
stuff
stuff2
child process exited with code null
child process exited with code null
false
stuff
stuff2
false
stuff
stuff2
